# EnergyStock

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  visualize.py
agent/: actor_critic.py  config.py  replay_buffer.py
backend/: Dockerfile  main.py  requirements.txt
backend/api/: llm_evaluator.py  routes.py
data/: pjm_data.csv  pjm_dataminer.py  synthetic_data.py  train_data.csv
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: EpisodeCharts.jsx  ScoreBar.jsx
frontend/src/pages/: Dashboard.jsx  Evaluate.jsx  RunEpisode.jsx
openenv/: client.py  models.py
openenv/server/: app.py  env.py
server/: app.py
train/: eval_results.txt  evaluate.py  export_safetensors.py  llm_evaluate.py  trainer.py
train/models/: bess_RL_master_bundle.safetensors  bess_easy_bundle.safetensors  best_model_easy_actor.pth  best_model_easy_actor_optimizer.pth  best_model_easy_alpha.pth  best_model_easy_critic.pth  best_model_easy_critic_optimizer.pth  best_model_easy_meta.json  best_model_hard_actor.pth  best_model_hard_actor_optimizer.pth  best_model_hard_alpha.pth  best_model_hard_critic.pth  best_model_hard_critic_optimizer.pth  best_model_hard_meta.json  best_model_medium_actor.pth  best_model_medium_actor_optimizer.pth  best_model_medium_alpha.pth  best_model_medium_critic.pth  best_model_medium_critic_optimizer.pth  best_model_medium_meta.json
