[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bess_rl"
version = "1.0.0"
requires-python = ">=3.13"
description = "BESS-RL Platform Environment"
authors = [{name = "Sai Teja", email = "test@example.com"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "torch>=2.2.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
